--- a/style.css
+++ b/style.css
@@ -26,6 +26,76 @@ body, html {
 .container h1 span {
     position: relative;
     display: inline-block;
-    animation: animate 1.5s ease-in-out infinite;
+    animation: animate 1.5s linear infinite;
 }
 
+h1 span:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 1px;
+    background: #fff;
+    transform: rotate(-45deg);
+    z-index: -1;
+}
+
+h1 span:nth-child(1){
+    animation-delay: 0s;
+}
+
+h1 span:nth-child(2){
+    animation-delay: 0.2s;
+}
+
+h1 span:nth-child(3){
+    animation-delay: 0.4s;
+}
+
+h1 span:nth-child(4){
+    animation-delay: 0.6s;
+}
+
+h1 span:nth-child(5){
+    animation-delay: 0.8s;
+}
+
+h1 span:nth-child(6){
+    animation-delay: 1.0s;
+}
+
+@keyframes animate {
+    0% {
+        transform: translateY(0px);
+    }
+
+    10% {
+        transform: translateY(-30px);
+    }
+
+    15% {
+        transform: translateY(0px);
+    }
+
+    25% {
+        transform: translateY(0px);
+    }
+
+    30% {
+        transform: translateY(0px);
+    }
+
+    40% {
+
+    }
+
+    45% {
+
+    }
+
+    100% {
+
+    }
+    
+
+}
